@@ -1,5 +1,10 @@
 2012-06-21  Hirofumi Kosaka  <kosaka@rworks.jp>
 
+	* extensions/pandora_logs.php: show the last 500k bytes
+	instead error message, if the file is too large.
+
+2012-06-21  Hirofumi Kosaka  <kosaka@rworks.jp>
+
 	* extensions/net_tools.php: Use 'whereis' to get command path
 	to execute, regardless $PATH environment.
 
